<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CadastroAnimalActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/Msm_Titulo"
            android:text="@string/msm_titulo_tela_cadastro_animal"/>

        <TextView
            style="@style/Msm_texto"
            android:text="@string/msm_tela_cadastro_animal"/>

    </LinearLayout>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="40dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    //<FrameLayout
                    style="@style/layout_opcao">

                    <TextView
                        style="@style/texto_opcao"
                        android:text="@string/opcao_especie"/>

                    <TextView
                        android:text="Cachorro"
                        android:layout_marginLeft="80dp"
                        style="@style/texto_result_opcao"/>

                </FrameLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="10dp">

                        <Button
                            android:background="@drawable/button_background_especie_dog"
                            style="@style/especie_layout_botao"/>

                        <Button
                            android:background="@drawable/button_background_especie_cat"
                            style="@style/especie_layout_botao"/>
                    </LinearLayout>

                    <FrameLayout
                        style="@style/layout_opcao">

                        <TextView
                            style="@style/texto_opcao"
                            android:text="@string/opcao_sexo"/>

                        <TextView
                            android:id="@+id/texto_result_sexo"
                            android:text="Macho"
                            android:layout_marginLeft="55dp"
                            style="@style/texto_result_opcao"/>

                    </FrameLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="10dp">

                        <Button
                            android:background="@drawable/button_background_sexo_macho"
                            style="@style/especie_layout_botao"/>

                        <Button
                            android:background="@drawable/button_background_raca_femea"
                            style="@style/especie_layout_botao"/>
                        //</LinearLayout>

                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_centerInParent="true"
                        android:paddingTop="20dp">

                        <Button
                            android:layout_width="120dp"
                            android:layout_height="100dp"
                            android:background="@drawable/button_background_foto_cadastro"/>

                        <TextView
                            style="@style/texto_opcao"
                            android:text="@string/opcao_foto"
                            android:layout_gravity="center"/>
                    </LinearLayout>

                </RelativeLayout>

            </LinearLayout>


            <LinearLayout
                style="@style/layout_opcao">

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/texto_opcao"
                        android:text="@string/opcao_nome" />

                    <ImageView
                        style="@style/texto_layout" />

                    <EditText
                        style="@style/texto_editor"
                        android:text="Fuscão"/>

                </FrameLayout>
            </LinearLayout>

            <LinearLayout
                style="@style/layout_opcao">

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/texto_opcao"
                        android:text="@string/opcao_raca" />

                    <ImageView
                        style="@style/texto_layout" />

                    <EditText
                        style="@style/texto_editor"
                        android:text="Vira - Lata"/>

                </FrameLayout>
            </LinearLayout>

        </LinearLayout>
    </FrameLayout>

    <Button
        android:id="@+id/btConcluir"
        android:text="Concluir"
        style="@style/botao_padrao">

    </Button>


</LinearLayout>