<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackGround"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@android:dimen/app_icon_size"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@drawable/logo_tela_inicial4" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/msg_tela_inicial"
                android:textColor="@android:color/black"
                android:textSize="18dp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="120dp">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="95dp"
                        android:src="@drawable/rectangle" />
                    <Button
                        android:id="@+id/btDaor"
                        android:layout_width="120dp"
                        android:layout_height="95dp"
                        android:layout_marginRight="40dp"
                        android:layout_alignParentRight="true"
                        android:background="@drawable/button_background_doar" />

                    <Button
                        android:id="@+id/btAdotar"
                        android:layout_width="120dp"
                        android:layout_height="95dp"
                        android:layout_marginLeft="40dp"
                        android:layout_alignParentLeft="true"
                        android:background="@drawable/button_background" />
                </RelativeLayout>

            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_marginLeft="70dp"
                        android:textSize="18dp"
                        android:textColor="@android:color/black"
                        android:text="@string/btn_adotar"
                        android:background="@null"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="80dp"
                        android:textSize="18dp"
                        android:layout_alignParentRight="true"
                        android:textColor="@android:color/black"
                        android:text="@string/btn_doar"
                        android:background="@null"/>

                </RelativeLayout>

            </FrameLayout>

        </LinearLayout>

    </FrameLayout>

</LinearLayout>
